--- a/style.css
+++ b/style.css
@@ -931,7 +931,7 @@ s @keyframes blink-caret {
 }
 
 #popUp {
-    position: fixed;
+    position: absolute;
     width: 50%;
     height: 30%;
     left: 25%;
@@ -977,11 +977,8 @@ s @keyframes blink-caret {
 }
 
 #confirmButton {
-    position: absolute;
-    width: 20%;
+    width: 200px;
     height: 20%;
-    left: 40%;
-    right: 40%;
     bottom: 10px;
     font-size: 1em;
     border-radius: 5px;
@@ -990,6 +987,8 @@ s @keyframes blink-caret {
     background-color: transparent;
     background-image: none;
     border-color: #ffc107;
+    margin: auto;
+    margin-bottom: 20px;
 }
 
 #confirmButton:hover {
@@ -1083,7 +1082,7 @@ footer {
     z-index: 1;
     background: rgba(91, 35, 25, 0.8);
     height: 40px;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     -moz-box-shadow: 0 -3px 15px 0 black;
     -webkit-box-shadow: 0 -3px 15px 0 black;
@@ -1117,6 +1116,10 @@ footer {
     width: 50%;
     left: 25%;
     right: 25%;
+}
+
+.marginBottom {
+    margin-bottom: 10px;
 }
 
 @media (max-width: 690px) {
@@ -1162,8 +1165,28 @@ footer {
     
     #popUp {
         width: 90%;
+        height: 220px;
         left: 0;
         right: 0;
+    }
+    #confirmButton, #googleBtn, #facebookBtn, #searchBeerBtn, .btn-outline-warning, #popUpButton {
+        color: #212529;
+        background-color: #ffc107;
+        border-color: #ffc107;
+    }
+    
+    .btn-outline-light {
+        color: #212529;
+        background-color: #f8f9fa;
+        border-color: #f8f9fa;
+    }
+    
+    .storeBtn {
+    border-color: transparent;
+    }
+    
+    .loaderContainer {
+        width: 110%;
     }
 }
 
@@ -1202,10 +1225,8 @@ footer {
     }
     #confirmButton {
         width: 200px;
-        left: 0;
-        right: 0;
         margin: auto;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
         position: static;
     }
 }
