--- a/style.css
+++ b/style.css
@@ -710,13 +710,13 @@ h2 {
 
 .loaderContainer {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.85);
     z-index: 4;
+    text-align: center;
 }
 
 .spinnerText {
@@ -726,7 +726,6 @@ h2 {
     font-family: 'Kalam', cursive;
     padding-bottom: 20px;
     top: 30%;
-    width: 400px;
     color: white;
     letter-spacing: 3.5px;
     -webkit-animation: fadein 4s;
@@ -1197,10 +1196,6 @@ footer {
     
     .storeBtn {
     border-color: transparent;
-    }
-    
-    .loaderContainer {
-        width: 110%;
     }
 }
 
