--- a/style.css
+++ b/style.css
@@ -151,6 +151,13 @@ body {
     padding: 0;
 }
 
+#background {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
 .arrowUp {
     width: 0;
     height: 0;
